Social Network Visualizer (SocNetV) 


SocNetV News
-==========-

June 2023
========
- Version 3.1 release. The first Qt6 only version.

Jul 2021
========

- Version 3.0 released for Windows, macOS and Linux, with improved Graph calculations speed and new command line parameters.
  This is the first version to support hardware accelerated (OpenGL) rendering of the networks.
  The Web Crawler has been improved to test for OpenSSL support in the OS and give the user hints what to
  do if no OpenSSL is present. Also, the delay between requests has been fixed and it works. 
  Among various bug fixes: fixed a serious bug in weighted network centrality computations (see #123). 
  Note: To run SocNetV 3.0 AppImage in Fedora 34 which uses Wayland by default, use:
   env GDK_BACKEND=x11  ./SocNetV-3.0-dev-x86_64.AppImage
  The OBS repositories are working again, and you can download Fedora/openSUSE packages from there:
  https://download.opensuse.org/repositories/home:/oxy86/


Jun 2021
========

- Version 2.9 released, bugfixes
- Version 3.0 development. To run 3.0-dev in Fedora, use:
   env GDK_BACKEND=x11  ./SocNetV-3.0-dev-x86_64.AppImage

Jan 2021
========
- Version 2.8, with some bugfixes

Dec 2020
=======
- Version 2.6 and 2.7 release with bugfixes and new features.


Feb 2019
========
- Version 2.5 released with new features and bugfixes:
  Prominence scores distribution in reports and in-app mini chart.
  Support for custom node icons (PNG, JPEG, SVG, etc).
  Edge dichotomization algorithm.
  High quality theme, inspired from Material Design, for uniform look'n'feel of SocNetV across all OSes.
  Support for (double) edge weights in all formats. 
  Improved export to PDF and Image (with lots of new formats).
  Improved web crawler.
  Lattice network generator.
  Improved memory consumption and faster measure computations.
  Search and select multiple nodes by their numbers / labels / prominence scores.
  Many bug fixes.
  

Feb 2018
=======